@@ -1,5 +1,12 @@
 2008-11-18  Sam Steingold  <sds@gnu.org>
 
+	STACK: depth=in frames, size=in objects (Bruno)
+	* constsym.d, lispbibl.d, spvw.d, subr.d, subrkw.d, threads.lisp
+	* zthread.lisp (:VSTACK-SIZE): rename from :VSTACK-DEPTH
+	(*DEFAULT-VALUE-STACK-SIZE*): rename from *DEFAULT-VALUE-STACK-DEPTH*
+
+2008-11-18  Sam Steingold  <sds@gnu.org>
+
 	* zthread.d (check_thread): do not eval() the user supplied value
 
 2008-11-17  Vladimir Tzankov  <vtzankov@gmail.com>
